--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.14",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-google-oauth2": "^0.2.0",
     "query-string": "^6.12.1",
@@ -23,6 +24,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "request": "^2.79.0",
     "url": "^0.11.0"
   },
   "scripts": {
