--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/password-hash": "^1.2.20",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.22.0",
@@ -16,6 +17,7 @@
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-google-oauth2": "^0.2.0",
+    "password-hash": "^1.2.2",
     "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
