--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.14",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.11",
     "passport": "^0.4.1",
     "passport-google-oauth2": "^0.2.0",
     "password-hash": "^1.2.2",
